Relax action source validation
